# libdiva

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflow/: lintandtest.yml
.github/workflows/: lintandtest.yml
libdiva/: __init__.py  __main__.py  divafile.py  dlt.py  farc.py  texture.py
libdlt/: __init__.py  __main__.py  dlt.py
