[project]
name = "libdiva"
version = "0.1.0"
description = "library with tools to manipulate file formats found in Project Diva"
authors = [{ name = "memoryleak" }]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["DLT", "library", "python", "Project Diva"]
requires-python = ">= 3.8"

[project.urls]
homepage = "https://github.com/Flipleerr/libdiva"
repository = "https://github.com/Flipleerr/libdiva"